--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "libs/QtAppBase"]
 	path = libs/QtAppBase
 	url = https://github.com/caffedrine/QtAppBase
-	branch = master
+	branch = origin/master
 	
