--- a/libs/ASN1/CMakeLists.txt
+++ b/libs/ASN1/CMakeLists.txt
@@ -12,31 +12,14 @@ set_target_properties(ASN1Parser PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION
 
 configure_file(ASN1Parser.pc.in ASN1Parser.pc @ONLY)
 
-# Public API
-set_target_properties(ASN1Parser PROPERTIES PUBLIC_HEADER "${CMAKE_CURRENT_LIST_DIR}/src/ASN1_Object.h")
-
 # List the /include directory
 target_include_directories(ASN1Parser PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
         $<INSTALL_INTERFACE:src>)
 
-install(TARGETS ASN1Parser
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-
-install(TARGETS ASN1Parser
-        EXPORT ASN1ParserConfig
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
-
-export(TARGETS ASN1Parser
-        FILE "${CMAKE_CURRENT_BINARY_DIR}/ASN1ParserConfig.cmake")
-
-install(EXPORT ASN1ParserConfig
-        DESTINATION "${CMAKE_INSTALL_LIBDIR}/ASN1Parser/cmake")
-
-install(
-        DIRECTORY src
-        DESTINATION ${CMAKE_INSTALL_PREFIX})
-
-install(FILES ${CMAKE_BINARY_DIR}/ASN1Parser.pc
-        DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig)
+install(TARGETS ASN1Parser LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(TARGETS ASN1Parser EXPORT ASN1ParserConfig LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
+export(TARGETS ASN1Parser FILE "${CMAKE_CURRENT_BINARY_DIR}/ASN1ParserConfig.cmake")
+install(EXPORT ASN1ParserConfig DESTINATION "${CMAKE_INSTALL_LIBDIR}/ASN1Parser/cmake")
+install(DIRECTORY src DESTINATION ${CMAKE_INSTALL_PREFIX})
+install(FILES ${CMAKE_BINARY_DIR}/ASN1Parser.pc DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig)
