--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,11 +30,11 @@ find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets Network Core Concurrent RE
 # Add ASN1 Parser library
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/libs/ASN1)
 
-# Find the precompiled libQtAppBase library and installit when --target QtAppBase
+# Add core library
 set(LIB_QTAPPBASE_NAME QtAppBase)
 
 # 1. Either build library together with the project
-# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/libs/QtAppBase)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/libs/QtAppBase)
 
 ## 2. Either build library externally and then link it here
 #set(LIB_QTAPPBASE_DIR "${CMAKE_CURRENT_LIST_DIR}/libs/${LIB_QTAPPBASE_NAME}/build/deploy")
@@ -49,7 +49,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
         Qt${QT_VERSION_MAJOR}::Network
         Qt${QT_VERSION_MAJOR}::Widgets
         Qt${QT_VERSION_MAJOR}::Concurrent
-        # QtAppBase
+        base::QtAppBase
         ASN1::ASN1Parser)
 
 ## Deploy base library to executable folder
